fix(widgets): left side overlay visibility

--- a/src/main.css
+++ b/src/main.css
@@ -69,10 +69,12 @@ body[data-page="home"].is-icon-active #journals .journal-item:first-of-type h1.t
 #banner-widgets {
     width: 100%;
     height: 100%;
+    display: flex;
     align-items: flex-end;
     justify-content: flex-end;
 }
 #banner-widgets::before {
+    display: none;
     content: "";
     position: absolute;
     left: 0;
@@ -81,6 +83,9 @@ body[data-page="home"].is-icon-active #journals .journal-item:first-of-type h1.t
     height: 100%;
     background-color: rgba(var(--widgetsBgColor), 0.8);
     filter: drop-shadow(0px 1px 10px rgba(var(--widgetsTextColor), 0.4));
+}
+#banner-widgets.banner-widgets-bg::before {
+    display: block;
 }
 #banner-widgets iframe {
     margin: 0;
